CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(MyDrive)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(11_3_1_pthread_create)
ADD_SUBDIRECTORY(11_4_1_pthread_exit)
ADD_SUBDIRECTORY(11_5_1_pthread_join)
ADD_SUBDIRECTORY(11_6_1_pthread_cancel)
ADD_SUBDIRECTORY(11_6_2_pthread_setcancelstate)
#为上一个项目的补充
ADD_SUBDIRECTORY(11_6_2_1_pthread_setcancelstate)
#为自己根据文档写的代码,取消点，非取消点就无法取消线程
ADD_SUBDIRECTORY(11_6_3_pthread_setcanceltype)
#和上一个效果是一样的，不含取消点
ADD_SUBDIRECTORY(11_6_3_1_pthread_setcanceltype)
#和上一个唯一不同的是加了pthread_testcancel
ADD_SUBDIRECTORY(11_6_3_2_pthread_testcancel)
ADD_SUBDIRECTORY(11_7_1_pthread_detach)
ADD_SUBDIRECTORY(11_8_1_pthread_cleanup_push)
ADD_SUBDIRECTORY(11_8_2_pthread_cleanup_push)
ADD_SUBDIRECTORY(11_9_1_pthread_attr_getstack)
ADD_SUBDIRECTORY(11_9_2_detachstate)
ADD_SUBDIRECTORY(12_1_1)
ADD_SUBDIRECTORY(12_2_1_pthread_mutex_t)
ADD_SUBDIRECTORY(12_2_2_pthread_mutex_trylock)
ADD_SUBDIRECTORY(12_2_3_pthread_mutex_destroy)





