CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(MyDrive)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


ADD_SUBDIRECTORY(temp_calculate)
ADD_SUBDIRECTORY(8_4_1_signal)
ADD_SUBDIRECTORY(8_4_4_sigaction)
ADD_SUBDIRECTORY(8_5_1_kill)
ADD_SUBDIRECTORY(8_5_2_raise)
ADD_SUBDIRECTORY(8_6_1_alarm)
ADD_SUBDIRECTORY(8_6_1_1_alarm)
ADD_SUBDIRECTORY(8_6_2_alarm_pause)
ADD_SUBDIRECTORY(8_8_1_sys_siglist)
ADD_SUBDIRECTORY(8_8_2_strsignal)
ADD_SUBDIRECTORY(8_9_1_sigprocmask)
ADD_SUBDIRECTORY(8_10_1_sigsuspend)
ADD_SUBDIRECTORY(8_10_1_1_sigsuspend)
ADD_SUBDIRECTORY(8_11_1_sigqueue)
ADD_SUBDIRECTORY(8_11_2_sigaction)
ADD_SUBDIRECTORY(8_12_1_abort)
ADD_SUBDIRECTORY(9_1_1_atexit)
ADD_SUBDIRECTORY(9_1_2_getpid)
ADD_SUBDIRECTORY(9_2_1_environ)
ADD_SUBDIRECTORY(9_2_2_getenv)
ADD_SUBDIRECTORY(9_2_3_putenv)
ADD_SUBDIRECTORY(9_5_1_fork)
ADD_SUBDIRECTORY(9_5_2_fork)
ADD_SUBDIRECTORY(9_6_1_fork)
ADD_SUBDIRECTORY(9_6_2_fork)
ADD_SUBDIRECTORY(9_7_1_vfork)
ADD_SUBDIRECTORY(9_8_1_fork)
ADD_SUBDIRECTORY(9_8_2_fork)
ADD_SUBDIRECTORY(9_9_1_exit)
ADD_SUBDIRECTORY(9_9_2_exit)
ADD_SUBDIRECTORY(9_10_1_wait)
ADD_SUBDIRECTORY(9_10_2_waitpid)
ADD_SUBDIRECTORY(9_10_3_waitpid)
ADD_SUBDIRECTORY(9_10_4)
ADD_SUBDIRECTORY(9_10_5)
ADD_SUBDIRECTORY(9_10_6)
ADD_SUBDIRECTORY(9_11_1_execve)
ADD_SUBDIRECTORY(9_11_2_execve)
ADD_SUBDIRECTORY(9_11_3_execl)
ADD_SUBDIRECTORY(9_11_4_execv)
ADD_SUBDIRECTORY(9_11_5_execlp)
ADD_SUBDIRECTORY(9_11_6_execvp)
ADD_SUBDIRECTORY(9_11_7_execle)
ADD_SUBDIRECTORY(9_11_8_execvpe)
ADD_SUBDIRECTORY(9_11_9_system)
ADD_SUBDIRECTORY(9_12_1_getpgrp_getpgid)
ADD_SUBDIRECTORY(9_12_2_setpgrp_setpgid)

ADD_SUBDIRECTORY(11_3_1_pthread_create)
ADD_SUBDIRECTORY(11_4_1_pthread_exit)
ADD_SUBDIRECTORY(11_5_1_pthread_join)
ADD_SUBDIRECTORY(11_6_1_pthread_cancel)
ADD_SUBDIRECTORY(11_6_2_pthread_setcancelstate)
#为上一个项目的补充
ADD_SUBDIRECTORY(11_6_2_1_pthread_setcancelstate)
#为自己根据文档写的代码,取消点，非取消点就无法取消线程
ADD_SUBDIRECTORY(11_6_3_pthread_setcanceltype)
#和上一个效果是一样的，不含取消点
ADD_SUBDIRECTORY(11_6_3_1_pthread_setcanceltype)
#和上一个唯一不同的是加了pthread_testcancel
ADD_SUBDIRECTORY(11_6_3_2_pthread_testcancel)
ADD_SUBDIRECTORY(11_7_1_pthread_detach)
ADD_SUBDIRECTORY(11_8_1_pthread_cleanup_push)
ADD_SUBDIRECTORY(11_8_2_pthread_cleanup_push)
ADD_SUBDIRECTORY(11_9_1_pthread_attr_getstack)
ADD_SUBDIRECTORY(11_9_2_detachstate)
ADD_SUBDIRECTORY(12_1_1)
ADD_SUBDIRECTORY(12_2_1_pthread_mutex_t)
ADD_SUBDIRECTORY(12_2_2_pthread_mutex_trylock)
ADD_SUBDIRECTORY(12_2_3_pthread_mutex_destroy)
ADD_SUBDIRECTORY(12_3_1)
ADD_SUBDIRECTORY(12_3_2)
ADD_SUBDIRECTORY(12_3_2_1)
ADD_SUBDIRECTORY(12_4_1_pthread_spinlock_t)
ADD_SUBDIRECTORY(12_5_1_pthread_rwlock_t)
ADD_SUBDIRECTORY(13_1_1_O_NONBLOCK)
ADD_SUBDIRECTORY(13_1_2_O_NONBLOCK)
ADD_SUBDIRECTORY(13_1_3_O_NONBLOCK)
ADD_SUBDIRECTORY(13_1_4_O_NONBLOCK)
ADD_SUBDIRECTORY(13_1_5_O_NONBLOCK)
ADD_SUBDIRECTORY(13_2_1_select)
ADD_SUBDIRECTORY(13_2_3_poll)




